[gd_scene load_steps=6 format=3 uid="uid://df6p66co5k8dl"]

[ext_resource type="Script" path="res://start.gd" id="1_fgfpt"]
[ext_resource type="Texture2D" uid="uid://cl6a4kvly83h0" path="res://img/Console1.jpeg" id="1_pp0pn"]
[ext_resource type="Texture2D" uid="uid://df0he70i62yv3" path="res://img/earth_from_space.jpg" id="2_d31id"]
[ext_resource type="Texture2D" uid="uid://dddmusm3qd7pp" path="res://img/navespazjalwgdshxuz.png" id="3_iceuv"]
[ext_resource type="Texture2D" uid="uid://d1syvek4hea42" path="res://img/SpaceStation.jpeg" id="3_s1wsb"]

[node name="Start" type="Node2D"]
script = ExtResource("1_fgfpt")

[node name="Space" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.16, 1.12)
texture = ExtResource("2_d31id")

[node name="Story" type="TextureRect" parent="."]
visible = false
offset_left = 90.0
offset_top = 43.0
offset_right = 1370.0
offset_bottom = 941.0
scale = Vector2(0.744234, 0.475886)
texture = ExtResource("3_iceuv")

[node name="StoryText" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 517.0
offset_right = 470.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.47335, 2.1888)
text = "MEME IMPOSTOR"
autowrap_mode = 3

[node name="Console" type="TextureRect" parent="."]
visible = false
offset_right = 766.0
offset_bottom = 766.0
scale = Vector2(1.50845, 0.838421)
texture = ExtResource("1_pp0pn")
expand_mode = 4

[node name="Pic" type="TextureRect" parent="Console"]
offset_left = 192.913
offset_top = 231.387
offset_right = 252.913
offset_bottom = 291.387
scale = Vector2(3.80176, 7.12249)
texture = ExtResource("3_s1wsb")
expand_mode = 4

[node name="Titolo" type="Label" parent="Console"]
layout_mode = 0
offset_left = 190.261
offset_top = 83.4903
offset_right = 319.261
offset_bottom = 106.49
scale = Vector2(1.78205, 2.28296)
text = "Routine - Process Tasks"
autowrap_mode = 3

[node name="Testo" type="Label" parent="Console"]
layout_mode = 0
offset_left = 432.893
offset_top = 79.9121
offset_right = 532.893
offset_bottom = 1506.91
scale = Vector2(1.5538, 1.39986)
text = "private async executeCommand(name: string, fn: (...args: any[]) => Promise<any>, ...args: any[]): Promise<any> {
    if (!this.debouncedCommands[name]) this.debouncedCommands[name] = _.debounce(
      async (...args: any[]): Promise<any> => {
        try {
          return await fn(...args);
        } catch (error) {
          await this.processError(error, {
            message: errorsLogs.command(name),
          });
        }
      },
      COMMAND_DEBOUNCE_INTERVAL,
      { leading: true, trailing: false },
    );
    return this.debouncedCommands[name](...args);"
autowrap_mode = 3
clip_text = true
max_lines_visible = 16

[node name="TextureButton" type="TextureButton" parent="Console"]
layout_mode = 0
offset_left = 92.8102
offset_top = 300.565
offset_right = 132.81
offset_bottom = 340.565

[node name="TouchScreenButton" type="TouchScreenButton" parent="Console/TextureButton"]
position = Vector2(-92.8102, -300.565)
rotation = 3.14159
scale = Vector2(11.5959, 5.45086)

[node name="TextEdit" type="TextEdit" parent="Console"]
visible = false
layout_mode = 0
offset_left = 430.242
offset_top = 84.683
offset_right = 438.242
offset_bottom = 92.683
scale = Vector2(18.6074, 27.0967)
text = "Scrivi qui il tuo meme"
scroll_vertical = 1.0

[node name="TimerStory" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="timeout" from="TimerStory" to="." method="_on_timer_story_timeout"]
